Employee Get byId and fix GetAll